# powwow

./: .gitignore  COPYING  ChangeLog  ChangeLog.old  Hacking  Makefile.am  Makefile.in  NEWS  README  README.follow  README.modules  README.term  TODO  autogen.sh  beam.c  beam.h  catrw.c  cmd.c  cmd.h  cmd2.c  cmd2.h  configure  configure.ac  configure.in  defines.h  dist-info.cf  edit.c  edit.h  eval.c  eval.h  follow.c  list.c  list.h  log.c  log.h  main.c  main.h  map.c  map.h  movie.c  (+17 more)
debian/: changelog  control  rules
doc/: Config.demo  Hacking  Makefile.am  TODO  powwow.doc  powwow.doc.in
feature/: regex.h
man/: Makefile.am  powwow.6.utf-8.in
src/: Makefile.am  beam.c  beam.h  cmd.c  cmd.h  cmd2.c  cmd2.h  defines.h  edit.c  edit.h  eval.c  list.c  list.h  log.c  log.h  main.c  main.h  map.c  plugtest.c  ptr.c  ptr.h  tcp.h  tty.h  utils.c  utils.h
